--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <div class="game">
         <div class="character">
-            <img src="Screenshot 2025-07-13 at 8.19.56 PM.png">
+            <img src="brock.png">
         </div>
         <div class="enemy">
-            <img src="Screenshot 2025-07-13 at 8.26.16 PM.png">
+            <img src="lofton.png">
         </div>
     </div>
     <br>
